ordering should be more or less finished now